# oper

./: Cargo.toml  README.md  Readme.md
.github/workflows/: rust.yml
assets/: style.toml
src/: config.rs  main.rs  model.rs  report.rs  styles.rs  table_view.rs  ui.rs  utils.rs
src/views/: diff_view.rs  list_view.rs  main_view.rs  mod.rs  seperator_view.rs  table_view.rs
