[package]
name = "oper"
version = "0.2.4"
authors = ["Florian Bramer <elektronenhirn@gmail.com>"]
description = "Command line tool to browse changes across multiple git repositories managed by google's git-repo tool"
edition = "2018"
categories = ["command-line-interface", "gui", "git-repo"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/elektronenhirn/oper.git"

[dependencies]
chrono = "0.4.10"
clap = "2.33.0"
console = "0.9.2"
cursive = "0.12"
git2 = "0.11.0"
indicatif = { version = "0.14.0", features = ["with_rayon"] }
lazy_static = "1.4.0"
log = "0.4.8"
rayon = "1.3.0"
simple_logger = "1.5.0"
time = "0.2.6"
num_cpus = "1.12.0"
