[package]
name = "oper"
version = "0.4.1"
authors = ["Florian Bramer <elektronenhirn@gmail.com>"]
description = "Command line tool to browse changes across multiple git repositories managed by google's git-repo tool"
edition = "2018"
categories = ["command-line-interface", "gui", "git-repo"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/elektronenhirn/oper.git"

[dependencies]
anyhow = "1.0.34"
app_dirs = "1.2.1"
chrono = "0.4.10"
clap = "2.33.0"
console = "0.14.0"
cursive = { version = "0.20", features = ["toml"] }
csv = "1.1.4"
git2 = "0.13.17"
indicatif = { version = "0.15.0", features = ["with_rayon"] }
lazy_static = "1.4.0"
log = "0.4.8"
num_cpus = "1.12.0"
rayon = "1.3.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_any = { version = "0.5", default-features = false, features = ["toml"] }
simple_logger = "1.5.0"
spsheet = { version = "0.1.0", features = ["ods","xlsx"]}
time = "0.2.6"
toml = "0.5.6"
